[package]
name = "learn-rust"
version = "0.1.0"
authors = ["faramo_zayw <faramo.zayw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fzlib = { version = "0.1.0", path = "fzlib" }
reduce = "0.1.2"

[workspace]
members = [
    "fzlib"
]